crates/ink/tests/ui/contract/fail/constructor/constructor-payable-invalid-1.stderr
error: encountered unknown ink! attribute argument: payable
 --> tests/ui/contract/fail/constructor/constructor-payable-invalid-1.rs:9:28
  |
9 |         #[ink(constructor, payable = true)]
  |                            ^^^^^^^
